feat: :art: Added left side navigation bar

--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 </head>
 
 <body class="h-screen w-screen">
-    <div class="flex bg-gray-900 h-12 w-full">
+    <div class="flex bg-gray-950 h-12 w-full">
         <div class="flex flex-1 justify-start items-center ml-2 p-2 gap-2">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" style="color: white;" />
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor" class="cursor-pointer size-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
+                    style="color: white;" />
             </svg>
-            <svg xmlns="http://www.w3.org/2000/svg" id="yt-ringo2-svg_yt7" width="93" height="20" viewBox="0 0 93 20" focusable="false" aria-hidden="true">
+            <svg xmlns="http://www.w3.org/2000/svg" id="yt-ringo2-svg_yt7" class="cursor-pointer ml-6" width="93"
+                height="20" viewBox="0 0 93 20" focusable="false" aria-hidden="true">
                 <g>
                     <path
                         d="M14.4848 20C14.4848 20 23.5695 20 25.8229 19.4C27.0917 19.06 28.0459 18.08 28.3808 16.87C29 14.65 29 9.98 29 9.98C29 9.98 29 5.34 28.3808 3.14C28.0459 1.9 27.0917 0.94 25.8229 0.61C23.5695 0 14.4848 0 14.4848 0C14.4848 0 5.42037 0 3.17711 0.61C1.9286 0.94 0.954148 1.9 0.59888 3.14C0 5.34 0 9.98 0 9.98C0 9.98 0 14.65 0.59888 16.87C0.954148 18.08 1.9286 19.06 3.17711 19.4C5.42037 20 14.4848 20 14.4848 20Z"
@@ -31,7 +34,8 @@
                     <path fill="white"
                         d="M52.2713 19.0899C53.7313 19.0899 54.6413 18.4799 55.3913 17.3799H55.5013L55.6113 18.8999H57.6012V6.53994H54.9613V16.4699C54.6812 16.9599 54.0312 17.3199 53.4212 17.3199C52.6512 17.3199 52.4113 16.7099 52.4113 15.6899V6.53994H49.7812V15.8099C49.7812 17.8199 50.3613 19.0899 52.2713 19.0899Z">
                     </path>
-                    <path fill="white" d="M62.8261 18.8999V4.14994H65.8661V2.09994H57.1761V4.14994H60.2161V18.8999H62.8261Z"></path>
+                    <path fill="white"
+                        d="M62.8261 18.8999V4.14994H65.8661V2.09994H57.1761V4.14994H60.2161V18.8999H62.8261Z"></path>
                     <path fill="white"
                         d="M67.8728 19.0899C69.3328 19.0899 70.2428 18.4799 70.9928 17.3799H71.1028L71.2128 18.8999H73.2028V6.53994H70.5628V16.4699C70.2828 16.9599 69.6328 17.3199 69.0228 17.3199C68.2528 17.3199 68.0128 16.7099 68.0128 15.6899V6.53994H65.3828V15.8099C65.3828 17.8199 65.9628 19.0899 67.8728 19.0899Z">
                     </path>
@@ -45,36 +49,54 @@
             </svg>
         </div>
         <div class="flex flex-1 justify-center items-center">
-            <input class="bg-gray-800 rounded-l-full border border-gray-700 text-white outline-none pl-4" type="text">
-            <button class="bg-gray-700 pl-3 h-6.5 w-15 rounded-r-full cursor-pointer">
+            <input class="bg-gray-900 rounded-l-full border border-gray-800 text-white outline-none pl-4 w-sm"
+                type="text">
+            <button class="bg-gray-700 pl-4 h-6.5 w-15 rounded-r-full cursor-pointer">
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-5" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                     stroke="currentColor" class="size-6" style="color: white;">
                     <path stroke-linecap="round" stroke-linejoin="round"
                         d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
                 </svg>
             </button>
+            <div class="pl-6">
+                <svg xmlns="http://www.w3.org/2000/svg" class="cursor-pointer bg-gray-700 rounded-full h-7" fill="none"
+                    viewBox="-3.5 -3.5 24 24" stroke-width="1.5" stroke="currentColor" style="color: white;">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M12 18.75a6 6 0 0 0 6-6v-1.5m-6 7.5a6 6 0 0 1-6-6v-1.5m6 7.5v3.75m-3.75 0h7.5M12 15.75a3 3 0 0 1-3-3V4.5a3 3 0 1 1 6 0v8.25a3 3 0 0 1-3 3Z"
+                        transform="scale(0.7)" />
+                </svg>
+            </div>
         </div>
-        <div class="flex flex-1 justify-end items-center gap-2">
-            <svg xmlns="http://www.w3.org/2000/svg" class="w-5" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                stroke="currentColor" class="size-6" style="color: white;">
-                <path stroke-linecap="round" stroke-linejoin="round"
-                    d="M12 18.75a6 6 0 0 0 6-6v-1.5m-6 7.5a6 6 0 0 1-6-6v-1.5m6 7.5v3.75m-3.75 0h7.5M12 15.75a3 3 0 0 1-3-3V4.5a3 3 0 1 1 6 0v8.25a3 3 0 0 1-3 3Z" />
-            </svg>
-            <svg xmlns="http://www.w3.org/2000/svg" class="w-5" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                stroke="currentColor" class="size-6" style="color: white;">
+        <div class="flex flex-1 justify-end items-center gap-4 pr-4">
+
+            <svg xmlns="http://www.w3.org/2000/svg" class="cursor-pointer w-5" fill="none" viewBox="0 0 24 24"
+                stroke-width="1.5" stroke="currentColor" class="size-6" style="color: white;">
                 <path stroke-linecap="round" stroke-linejoin="round"
                     d="m15.75 10.5 4.72-4.72a.75.75 0 0 1 1.28.53v11.38a.75.75 0 0 1-1.28.53l-4.72-4.72M4.5 18.75h9a2.25 2.25 0 0 0 2.25-2.25v-9a2.25 2.25 0 0 0-2.25-2.25h-9A2.25 2.25 0 0 0 2.25 7.5v9a2.25 2.25 0 0 0 2.25 2.25Z" />
             </svg>
-            <svg xmlns="http://www.w3.org/2000/svg" class="w-5" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                stroke="currentColor" class="size-6" style="color: white;">
+            <img src="./src/image/png/app-white.png" class="cursor-pointer w-5">
+            <svg xmlns="http://www.w3.org/2000/svg" class="cursor-pointer w-5" fill="none" viewBox="0 0 24 24"
+                stroke-width="1.5" stroke="currentColor" class="size-6" style="color: white;">
                 <path stroke-linecap="round" stroke-linejoin="round"
                     d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" />
             </svg>
-
-            <img src="./src/image/png/app-white.png" class="w-5">
+            <div class="h-6 w-6 bg-purple-600 rounded-full cursor-pointer mr-2">
+            </div>
         </div>
 
     </div>
+
+    <div class="flex flex-col items-center w-20 h-screen bg-gray-900">
+        <img src="src/image/png/home.png" class="cursor-pointer flex mt-5 mb-1 justify-center h-7 w-7 ">
+        <p class="text-white text-xs mb-5">Home</p>
+        <img src="src/image/png/shorts.png" class="cursor-pointer flex mt-5 mb-1 justify-center h-7 w-7 ">
+        <p class="text-white text-xs mb-5">Shorts</p>
+        <img src="src/image/png/subscriptions.png" class="cursor-pointer flex mt-5 mb-1 justify-center h-7 w-7 ">
+        <p class="text-white text-xs mb-5">Subscriptions</p>
+        <img src="src/image/png/library.png" class="cursor-pointer flex mt-5 mb-1 justify-center h-7 w-7 ">
+        <p class="text-white text-xs mb-5">Library</p>
+    </div>
+
 </body>
 
 </html>
