feat: :art: Added channel logo in the medium of the page

--- a/index.html
+++ b/index.html
@@ -85,18 +85,19 @@
         </div>
 
     </div>
-
-    <div class="flex flex-col items-center w-20 h-screen bg-gray-900">
-        <img src="src/image/png/home.png" class="cursor-pointer flex mt-5 mb-1 justify-center h-7 w-7 ">
-        <p class="text-white text-xs mb-5">Home</p>
-        <img src="src/image/png/shorts.png" class="cursor-pointer flex mt-5 mb-1 justify-center h-7 w-7 ">
-        <p class="text-white text-xs mb-5">Shorts</p>
-        <img src="src/image/png/subscriptions.png" class="cursor-pointer flex mt-5 mb-1 justify-center h-7 w-7 ">
-        <p class="text-white text-xs mb-5">Subscriptions</p>
-        <img src="src/image/png/library.png" class="cursor-pointer flex mt-5 mb-1 justify-center h-7 w-7 ">
-        <p class="text-white text-xs mb-5">Library</p>
+    <div class="flex">
+        <div class="flex flex-col items-center w-20 h-screen bg-gray-900">
+            <img src="src/image/png/home.png" class="cursor-pointer flex mt-5 mb-1 justify-center h-7 w-7 ">
+            <p class="text-white text-xs mb-5">Home</p>
+            <img src="src/image/png/shorts.png" class="cursor-pointer flex mt-5 mb-1 justify-center h-7 w-7 ">
+            <p class="text-white text-xs mb-5">Shorts</p>
+            <img src="src/image/png/subscriptions.png" class="cursor-pointer flex mt-5 mb-1 justify-center h-7 w-7 ">
+            <p class="text-white text-xs mb-5">Subscriptions</p>
+            <img src="src/image/png/library.png" class="cursor-pointer flex mt-5 mb-1 justify-center h-7 w-7 ">
+            <p class="text-white text-xs mb-5">Library</p>
+        </div>
+        <div class="bg-purple-600 h-80 w-screen"></div>
     </div>
-
 </body>
 
 </html>
