feat: :art: Added channel description below menu

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                         <div class="h-30 w-30 bg-purple-600 rounded-full mr-2">
                         </div>
                         <div class="pt-8 pl-2">
-                            <h3 class="text-white text-lg">Channel Name</h3>
-                            <p class="text-gray-400 text-sm">5.5M subscribers</p>
+                            <h3 class="text-white text-lg">Dev Andre MB</h3>
+                            <p class="text-gray-500 text-sm">7.9M subscribers</p>
                         </div>
                     </div>
                     <div>
@@ -131,11 +131,22 @@
                                 </svg>
                             </button>
                         </div>
+                        <div class=" flex text-white">
+                            <div class="h-30 w-50 bg-purple-600 rounded-md mr-2">
+                            </div>
+                            <div class="pl-2">
+                                <h3 class="text-white text-lg">Dev André MB</h3>
+                                <p class="text-gray-500 text-sm">7.9M subscribers</p>
+                                <p>HAIL HAIL my troop, let's go, let's go ahead I'm good and young!!!</p>
+                                <p>Thanks to open my project!!</p>
+                                <p>Acess my GitHub -> <a href="https://github.com/andmb20" target="_blank"
+                                        class="text-blue-600">github.com/andmb20</a></p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
     </div>
 </body>
 
