feat: :art: Added the video layout, finished the project

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <path stroke-linecap="round" stroke-linejoin="round"
                     d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" />
             </svg>
-            <div class="h-6 w-6 bg-purple-600 rounded-full cursor-pointer mr-2">
+            <div class="h-6 w-6 bg-blue-700 rounded-full cursor-pointer mr-2">
             </div>
         </div>
 
@@ -98,14 +98,14 @@
             <p class="text-white text-xs mb-5">Library</p>
         </div>
         <div class="flex flex-col w-screen">
-            <div class="flex bg-purple-600 h-150 w-full"></div>
+            <div class="flex bg-blue-700 h-150 w-full"></div>
             <div class="flex justify-center bg-gray-900 h-full w-full">
                 <div class="flex justify-between h-full pt-20 w-3/4">
                     <div class="flex">
-                        <div class="h-30 w-30 bg-purple-600 rounded-full mr-2">
+                        <div class="h-30 w-30 bg-blue-500 rounded-full mr-2">
                         </div>
                         <div class="pt-8 pl-2">
-                            <h3 class="text-white text-lg">Dev Andre MB</h3>
+                            <h3 class="text-white text-lg">Andre's Channel</h3>
                             <p class="text-gray-500 text-sm">7.9M subscribers</p>
                         </div>
                     </div>
@@ -132,15 +132,184 @@
                             </button>
                         </div>
                         <div class=" flex text-white">
-                            <div class="h-30 w-50 bg-purple-600 rounded-md mr-2">
+                            <div class="h-30 w-50 bg-blue-800 rounded-md mr-2">
                             </div>
                             <div class="pl-2">
-                                <h3 class="text-white text-lg">Dev André MB</h3>
-                                <p class="text-gray-500 text-sm">7.9M subscribers</p>
-                                <p>HAIL HAIL my troop, let's go, let's go ahead I'm good and young!!!</p>
-                                <p>Thanks to open my project!!</p>
-                                <p>Acess my GitHub -> <a href="https://github.com/andmb20" target="_blank"
-                                        class="text-blue-600">github.com/andmb20</a></p>
+                                <h2 class="text-white text-lg">Andre's Channel</h3>
+                                    <p class="text-gray-500 text-sm">122M views • 3 year ago</p>
+                                    <p>HAIL HAIL my troop, let's go, let's go ahead I'm good and young!!!</p>
+                                    <p>Thanks to open my project!!</p>
+                                    <p>Acess my GitHub -> <a href="https://github.com/andmb20" target="_blank"
+                                            class="text-blue-600">github.com/andmb20</a></p>
+                            </div>
+                        </div>
+                        <div class="flex pt-10">
+                            <h3 class="text-white text-lg font-bold ">Newest Channel Videos!</h2>
+                                <div class="flex ml-9">
+                                    <img src="src/image/png/subscriptions.png"
+                                        class="cursor-pointer flex mt-1 justify-center h-5 w-5 ">
+                                </div>
+                                <p class="cursor-pointer text-gray-500 text-sm pl-1 pt-1 ">Play all</p>
+                        </div>
+                        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-6 gap-4">
+
+                            <!-- Vídeo 1 -->
+                            <div class="flex flex-col text-white mt-5">
+                                <div class="h-50px h-30 rounded-md w-full bg-blue-900 relative">
+                                    <span
+                                        class="absolute bottom-1 right-1 bg-black text-white text-xs px-1 rounded">10:45</span>
+                                </div>
+                                <div class="flex mt-2">
+                                    <div>
+                                        <h3 class="font-medium text-sm line-clamp-2">Starting an incredible Journey</h3>
+                                        <p class="text-gray-600 text-xs">Andre's Channel</p>
+                                        <p class="text-gray-500 text-xs">100K visualizações • há 2 dias</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="flex flex-col text-white mt-5">
+                                <div class="h-50px h-30 rounded-md w-full bg-blue-900 relative">
+                                    <span
+                                        class="absolute bottom-1 right-1 bg-black text-white text-xs px-1 rounded">14:16</span>
+                                </div>
+                                <div class="flex mt-2">
+                                    <div>
+                                        <h3 class="font-medium text-sm line-clamp-2">Starting an incredible Journey</h3>
+                                        <p class="text-gray-600 text-xs">Andre's Channel</p>
+                                        <p class="text-gray-500 text-xs">100K visualizações • há 2 dias</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flex flex-col text-white mt-5">
+                                <div class="h-50px h-30 rounded-md w-full bg-blue-900 relative">
+                                    <span
+                                        class="absolute bottom-1 right-1 bg-black text-white text-xs px-1 rounded">12:08</span>
+                                </div>
+                                <div class="flex mt-2">
+                                    <div>
+                                        <h3 class="font-medium text-sm line-clamp-2">Starting an incredible Journey</h3>
+                                        <p class="text-gray-600 text-xs">Andre's Channel</p>
+                                        <p class="text-gray-500 text-xs">100K visualizações • há 2 dias</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flex flex-col text-white mt-5">
+                                <div class="h-50px h-30 rounded-md w-full bg-blue-900 relative">
+                                    <span
+                                        class="absolute bottom-1 right-1 bg-black text-white text-xs px-1 rounded">05:17</span>
+                                </div>
+                                <div class="flex mt-2">
+                                    <div>
+                                        <h3 class="font-medium text-sm line-clamp-2">Starting an incredible Journey</h3>
+                                        <p class="text-gray-600 text-xs">Andre's Channel</p>
+                                        <p class="text-gray-500 text-xs">100K visualizações • há 2 dias</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flex flex-col text-white mt-5">
+                                <div class="h-50px h-30 rounded-md w-full bg-blue-900 relative">
+                                    <span
+                                        class="absolute bottom-1 right-1 bg-black text-white text-xs px-1 rounded">07:31</span>
+                                </div>
+                                <div class="flex mt-2">
+                                    <div>
+                                        <h3 class="font-medium text-sm line-clamp-2">Starting an incredible Journey</h3>
+                                        <p class="text-gray-600 text-xs">Andre's Channel</p>
+                                        <p class="text-gray-500 text-xs">100K visualizações • há 2 dias</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flex flex-col text-white mt-5">
+                                <div class="h-50px h-30 rounded-md w-full bg-blue-900 relative">
+                                    <span
+                                        class="absolute bottom-1 right-1 bg-black text-white text-xs px-1 rounded">20:20</span>
+                                </div>
+                                <div class="flex mt-2">
+                                    <div>
+                                        <h3 class="font-medium text-sm line-clamp-2">Starting an incredible Journey</h3>
+                                        <p class="text-gray-600 text-xs">Andre's Channel</p>
+                                        <p class="text-gray-500 text-xs">100K visualizações • há 2 dias</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flex flex-col text-white mt-5">
+                                <div class="h-50px h-30 rounded-md w-full bg-blue-900 relative">
+                                    <span
+                                        class="absolute bottom-1 right-1 bg-black text-white text-xs px-1 rounded">06:15</span>
+                                </div>
+                                <div class="flex mt-2">
+                                    <div>
+                                        <h3 class="font-medium text-sm line-clamp-2">Starting an incredible Journey</h3>
+                                        <p class="text-gray-600 text-xs">Andre's Channel</p>
+                                        <p class="text-gray-500 text-xs">100K visualizações • há 2 dias</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flex flex-col text-white mt-5">
+                                <div class="h-50px h-30 rounded-md w-full bg-blue-900 relative">
+                                    <span
+                                        class="absolute bottom-1 right-1 bg-black text-white text-xs px-1 rounded">10:26</span>
+                                </div>
+                                <div class="flex mt-2">
+                                    <div>
+                                        <h3 class="font-medium text-sm line-clamp-2">Starting an incredible Journey</h3>
+                                        <p class="text-gray-600 text-xs">Andre's Channel</p>
+                                        <p class="text-gray-500 text-xs">100K visualizações • há 2 dias</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flex flex-col text-white mt-5">
+                                <div class="h-50px h-30 rounded-md w-full bg-blue-900 relative">
+                                    <span
+                                        class="absolute bottom-1 right-1 bg-black text-white text-xs px-1 rounded">08:12</span>
+                                </div>
+                                <div class="flex mt-2">
+                                    <div>
+                                        <h3 class="font-medium text-sm line-clamp-2">Starting an incredible Journey</h3>
+                                        <p class="text-gray-600 text-xs">Andre's Channel</p>
+                                        <p class="text-gray-500 text-xs">100K visualizações • há 2 dias</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flex flex-col text-white mt-5">
+                                <div class="h-50px h-30 rounded-md w-full bg-blue-900 relative">
+                                    <span
+                                        class="absolute bottom-1 right-1 bg-black text-white text-xs px-1 rounded">54:32</span>
+                                </div>
+                                <div class="flex mt-2">
+                                    <div>
+                                        <h3 class="font-medium text-sm line-clamp-2">Starting an incredible Journey</h3>
+                                        <p class="text-gray-600 text-xs">Andre's Channel</p>
+                                        <p class="text-gray-500 text-xs">100K visualizações • há 2 dias</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flex flex-col text-white mt-5">
+                                <div class="h-50px h-30 rounded-md w-full bg-blue-900 relative">
+                                    <span
+                                        class="absolute bottom-1 right-1 bg-black text-white text-xs px-1 rounded">10:20</span>
+                                </div>
+                                <div class="flex mt-2">
+                                    <div>
+                                        <h3 class="font-medium text-sm line-clamp-2">Starting an incredible Journey</h3>
+                                        <p class="text-gray-600 text-xs">Andre's Channel</p>
+                                        <p class="text-gray-500 text-xs">100K visualizações • há 2 dias</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flex flex-col text-white mt-5">
+                                <div class="h-50px h-30 rounded-md w-full bg-blue-900 relative">
+                                    <span
+                                        class="absolute bottom-1 right-1 bg-black text-white text-xs px-1 rounded">12:15</span>
+                                </div>
+                                <div class="flex mt-2">
+                                    <div>
+                                        <h3 class="font-medium text-sm line-clamp-2">Starting an incredible Journey</h3>
+                                        <p class="text-gray-600 text-xs">Andre's Channel</p>
+                                        <p class="text-gray-500 text-xs">100K views • 2 days ago</p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
